feat: rework svelte
